tests/baselines/reference/iterableArrayPattern8.errors.txt
tests/cases/conformance/es6/destructuring/iterableArrayPattern8.ts(17,1): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/es6/destructuring/iterableArrayPattern8.ts(17,8): error TS2322: Type '任意[]' is not assignable to type '文字'.


==== tests/cases/conformance/es6/destructuring/iterableArrayPattern8.ts (2 errors) ====
    class Bar { x }
    class Foo extends Bar { y }
    class FooIterator {
        next() {
            return {
                value: new Foo,
                done: false
            };
        }
    
        [Symbol.iterator]() {
            return this;
        }
    }
    
    var a: Bar, b: string;
    [a, ...b] = new FooIterator;
    ~~~~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
           ~
!!! error TS2322: Type '任意[]' is not assignable to type '文字'.